--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,12 @@
   "name": "chaton-backend",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "socket.io": "^4.8.3"
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5",
+    "dotenv": "^17.2.3"
   }
 }
